--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyND1JigN5SPJUltWTx3t2Ga",
+      "machine_shape": "hm",
+      "authorship_tag": "ABX9TyPD9Rbzd/SKL6M0wYCry0JZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +42,9 @@
         "!pip install transformers\n",
         "!pip install nltk\n",
         "!pip install psutil\n",
-        "!pip install h5py pip install typing-extensions pip install wheel  # If this is not installed, it shows error in below blue package isntallation\n",
+        "!pip install h5py \n",
+        "!pip install typing-extensions \n",
+        "!pip install wheel \n",
         "!pip install blue"
       ],
       "metadata": {
@@ -49,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vv_8MJCYAgMW",
-        "outputId": "a936d2b8-eb0d-40be-c7bd-1bcd404e23f6"
+        "outputId": "4c6bf951-fc9c-4dd1-cff7-a17a797fd9f1"
       },
       "execution_count": 2,
       "outputs": [
@@ -62,48 +65,48 @@
             "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.8/dist-packages (from torch) (4.4.0)\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: transformers in /usr/local/lib/python3.8/dist-packages (4.26.0)\n",
-            "Requirement already satisfied: huggingface-hub<1.0,>=0.11.0 in /usr/local/lib/python3.8/dist-packages (from transformers) (0.12.0)\n",
             "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.8/dist-packages (from transformers) (23.0)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.8/dist-packages (from transformers) (1.21.6)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.8/dist-packages (from transformers) (4.64.1)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.8/dist-packages (from transformers) (2022.6.2)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.8/dist-packages (from transformers) (2.25.1)\n",
             "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in /usr/local/lib/python3.8/dist-packages (from transformers) (0.13.2)\n",
+            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.8/dist-packages (from transformers) (4.64.1)\n",
             "Requirement already satisfied: filelock in /usr/local/lib/python3.8/dist-packages (from transformers) (3.9.0)\n",
+            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.8/dist-packages (from transformers) (1.21.6)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.8/dist-packages (from transformers) (2.25.1)\n",
             "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.8/dist-packages (from transformers) (6.0)\n",
+            "Requirement already satisfied: huggingface-hub<1.0,>=0.11.0 in /usr/local/lib/python3.8/dist-packages (from transformers) (0.12.0)\n",
+            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.8/dist-packages (from transformers) (2022.6.2)\n",
             "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.8/dist-packages (from huggingface-hub<1.0,>=0.11.0->transformers) (4.4.0)\n",
             "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests->transformers) (1.24.3)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests->transformers) (2.10)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests->transformers) (2022.12.7)\n",
             "Requirement already satisfied: chardet<5,>=3.0.2 in /usr/local/lib/python3.8/dist-packages (from requests->transformers) (4.0.0)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests->transformers) (2.10)\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: nltk in /usr/local/lib/python3.8/dist-packages (3.7)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.8/dist-packages (from nltk) (1.2.0)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.8/dist-packages (from nltk) (4.64.1)\n",
             "Requirement already satisfied: click in /usr/local/lib/python3.8/dist-packages (from nltk) (8.1.3)\n",
-            "Requirement already satisfied: joblib in /usr/local/lib/python3.8/dist-packages (from nltk) (1.2.0)\n",
             "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.8/dist-packages (from nltk) (2022.6.2)\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: psutil in /usr/local/lib/python3.8/dist-packages (5.4.8)\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: h5py in /usr/local/lib/python3.8/dist-packages (3.1.0)\n",
-            "Requirement already satisfied: pip in /usr/local/lib/python3.8/dist-packages (22.0.4)\n",
-            "Requirement already satisfied: install in /usr/local/lib/python3.8/dist-packages (1.3.5)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.8/dist-packages (4.4.0)\n",
-            "Requirement already satisfied: wheel in /usr/local/lib/python3.8/dist-packages (0.38.4)\n",
             "Requirement already satisfied: numpy>=1.17.5 in /usr/local/lib/python3.8/dist-packages (from h5py) (1.21.6)\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.8/dist-packages (4.4.0)\n",
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: wheel in /usr/local/lib/python3.8/dist-packages (0.38.4)\n",
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: blue in /usr/local/lib/python3.8/dist-packages (0.9.1)\n",
-            "Requirement already satisfied: black==22.1.0 in /usr/local/lib/python3.8/dist-packages (from blue) (22.1.0)\n",
             "Requirement already satisfied: flake8<5.0.0,>=3.8 in /usr/local/lib/python3.8/dist-packages (from blue) (4.0.1)\n",
+            "Requirement already satisfied: black==22.1.0 in /usr/local/lib/python3.8/dist-packages (from blue) (22.1.0)\n",
             "Requirement already satisfied: click>=8.0.0 in /usr/local/lib/python3.8/dist-packages (from black==22.1.0->blue) (8.1.3)\n",
-            "Requirement already satisfied: tomli>=1.1.0 in /usr/local/lib/python3.8/dist-packages (from black==22.1.0->blue) (2.0.1)\n",
-            "Requirement already satisfied: mypy-extensions>=0.4.3 in /usr/local/lib/python3.8/dist-packages (from black==22.1.0->blue) (0.4.3)\n",
             "Requirement already satisfied: pathspec>=0.9.0 in /usr/local/lib/python3.8/dist-packages (from black==22.1.0->blue) (0.11.0)\n",
             "Requirement already satisfied: platformdirs>=2 in /usr/local/lib/python3.8/dist-packages (from black==22.1.0->blue) (2.6.2)\n",
             "Requirement already satisfied: typing-extensions>=3.10.0.0 in /usr/local/lib/python3.8/dist-packages (from black==22.1.0->blue) (4.4.0)\n",
-            "Requirement already satisfied: pycodestyle<2.9.0,>=2.8.0 in /usr/local/lib/python3.8/dist-packages (from flake8<5.0.0,>=3.8->blue) (2.8.0)\n",
+            "Requirement already satisfied: mypy-extensions>=0.4.3 in /usr/local/lib/python3.8/dist-packages (from black==22.1.0->blue) (1.0.0)\n",
+            "Requirement already satisfied: tomli>=1.1.0 in /usr/local/lib/python3.8/dist-packages (from black==22.1.0->blue) (2.0.1)\n",
             "Requirement already satisfied: mccabe<0.7.0,>=0.6.0 in /usr/local/lib/python3.8/dist-packages (from flake8<5.0.0,>=3.8->blue) (0.6.1)\n",
-            "Requirement already satisfied: pyflakes<2.5.0,>=2.4.0 in /usr/local/lib/python3.8/dist-packages (from flake8<5.0.0,>=3.8->blue) (2.4.0)\n"
+            "Requirement already satisfied: pyflakes<2.5.0,>=2.4.0 in /usr/local/lib/python3.8/dist-packages (from flake8<5.0.0,>=3.8->blue) (2.4.0)\n",
+            "Requirement already satisfied: pycodestyle<2.9.0,>=2.8.0 in /usr/local/lib/python3.8/dist-packages (from flake8<5.0.0,>=3.8->blue) (2.8.0)\n"
           ]
         }
       ]
@@ -118,21 +121,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l694QXfL-Uxv",
-        "outputId": "773616a6-8bd5-4b16-b782-9758087e624b"
+        "outputId": "b5b05ec8-d667-4dc2-a9bb-8d2fbc9af036"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'codeBERT-QG'...\n",
-            "remote: Enumerating objects: 126, done.\u001b[K\n",
-            "remote: Counting objects: 100% (66/66), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (59/59), done.\u001b[K\n",
-            "remote: Total 126 (delta 29), reused 23 (delta 7), pack-reused 60\u001b[K\n",
-            "Receiving objects: 100% (126/126), 79.99 MiB | 22.91 MiB/s, done.\n",
-            "Resolving deltas: 100% (37/37), done.\n"
+            "remote: Enumerating objects: 240, done.\u001b[K\n",
+            "remote: Counting objects: 100% (180/180), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (104/104), done.\u001b[K\n",
+            "remote: Total 240 (delta 93), reused 152 (delta 76), pack-reused 60\u001b[K\n",
+            "Receiving objects: 100% (240/240), 80.08 MiB | 17.44 MiB/s, done.\n",
+            "Resolving deltas: 100% (101/101), done.\n"
           ]
         }
       ]
@@ -157,9 +160,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZyA5rzWq9zsO",
-        "outputId": "9814cd9a-6619-4857-80d0-2c86f54c3c4e"
+        "outputId": "2c13ab61-49f1-4076-f7c3-e2320fb8a2ab"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,52 +184,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NKxlAA1JD9qi",
-        "outputId": "6b238e53-0cdc-4799-fbfb-e0741961591b"
+        "outputId": "bde7bd40-b973-4c2b-c128-7b07e1e2d8a5"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "WARNING:__main__:Process rank: -1, device: cuda, n_gpu: 1, distributed training: False\n",
-            "model_class: <class 'transformers.models.roberta.modeling_roberta.RobertaModel'>\n",
-            "args.model_name_or_path: microsoft/codebert-base\n",
-            "config: RobertaConfig {\n",
-            "  \"_name_or_path\": \"microsoft/codebert-base\",\n",
-            "  \"architectures\": [\n",
-            "    \"RobertaModel\"\n",
-            "  ],\n",
-            "  \"attention_probs_dropout_prob\": 0.1,\n",
-            "  \"bos_token_id\": 0,\n",
-            "  \"classifier_dropout\": null,\n",
-            "  \"eos_token_id\": 2,\n",
-            "  \"hidden_act\": \"gelu\",\n",
-            "  \"hidden_dropout_prob\": 0.1,\n",
-            "  \"hidden_size\": 768,\n",
-            "  \"initializer_range\": 0.02,\n",
-            "  \"intermediate_size\": 3072,\n",
-            "  \"layer_norm_eps\": 1e-05,\n",
-            "  \"max_position_embeddings\": 514,\n",
-            "  \"model_type\": \"roberta\",\n",
-            "  \"num_attention_heads\": 12,\n",
-            "  \"num_hidden_layers\": 12,\n",
-            "  \"output_past\": true,\n",
-            "  \"pad_token_id\": 1,\n",
-            "  \"position_embedding_type\": \"absolute\",\n",
-            "  \"transformers_version\": \"4.26.0\",\n",
-            "  \"type_vocab_size\": 1,\n",
-            "  \"use_cache\": true,\n",
-            "  \"vocab_size\": 50265\n",
-            "}\n",
-            "\n",
-            "config.hidden_size: 768\n",
-            "config.num_attention_heads: 12\n",
-            "args.beam_size: 10\n",
-            "args.max_target_length: 30\n",
-            "tokenizer.cls_token_id: 0\n",
-            "tokenizer.sep_token_id: 2\n",
-            "args.load_model_path: None\n"
+            "Downloading (…)lve/main/config.json: 100% 498/498 [00:00<00:00, 79.8kB/s]\n",
+            "Downloading (…)olve/main/vocab.json: 100% 899k/899k [00:01<00:00, 679kB/s]\n",
+            "Downloading (…)olve/main/merges.txt: 100% 456k/456k [00:01<00:00, 411kB/s]\n",
+            "Downloading (…)cial_tokens_map.json: 100% 150/150 [00:00<00:00, 57.3kB/s]\n",
+            "Downloading (…)okenizer_config.json: 100% 25.0/25.0 [00:00<00:00, 9.99kB/s]\n",
+            "Downloading (…)\"pytorch_model.bin\";: 100% 499M/499M [00:00<00:00, 548MB/s]\n",
+            "/usr/local/lib/python3.8/dist-packages/transformers/optimization.py:306: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+            "  warnings.warn(\n",
+            "epoch 0 loss 6.9959:  17% 382/2282 [10:35<52:32,  1.66s/it]"
           ]
         }
       ]
@@ -237,7 +212,7 @@
       "metadata": {
         "id": "eKBqby1biS--"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -249,15 +224,6 @@
       "metadata": {
         "id": "ghuwcDAaOr6F"
       },
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "_cYJnsKFpzyb"
-      },
       "execution_count": null,
       "outputs": []
     },
@@ -266,101 +232,6 @@
       "source": [],
       "metadata": {
         "id": "s-gavMgep0LO"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import torch\n",
-        "print(torch.cuda.device_count())\n",
-        "print(torch.cuda.device_count())\n",
-        "\n",
-        "# check ram\n",
-        "#!cat /proc/meminfo\n",
-        "\n",
-        "# List device allocated by google collab\n",
-        "#from tensorflow.python.client import device_lib\n",
-        "#device_lib.list_local_devices() \n",
-        "\n",
-        "# Test if GUP is enabled\n",
-        "import tensorflow as tf\n",
-        "tf.test.gpu_device_name()\n",
-        "\n",
-        "\n",
-        "# args.output_dir : ../output/cbQG\n",
-        "# args.load_model_path : None\n",
-        "# args.local_rank : -1\n",
-        "# args.no_cuda : False\n",
-        "# args.seed : 42\n",
-        "# args.model_type : roberta\n",
-        "# WARNING:__main__:Process rank: -1, device: cuda, n_gpu: 1, distributed training: False\n",
-        "# Downloading (…)lve/main/config.json: 100% 498/498 [00:00<00:00, 88.7kB/s]\n",
-        "# Downloading (…)olve/main/vocab.json: 100% 899k/899k [00:00<00:00, 2.88MB/s]\n",
-        "# Downloading (…)olve/main/merges.txt: 100% 456k/456k [00:00<00:00, 1.48MB/s]\n",
-        "# Downloading (…)cial_tokens_map.json: 100% 150/150 [00:00<00:00, 62.7kB/s]\n",
-        "# Downloading (…)okenizer_config.json: 100% 25.0/25.0 [00:00<00:00, 10.2kB/s]\n",
-        "# config_class : <class 'transformers.models.roberta.configuration_roberta.RobertaConfig'>\n",
-        "# model_class : <class 'transformers.models.roberta.modeling_roberta.RobertaModel'>\n",
-        "# tokenizer_class : <class 'transformers.models.roberta.tokenization_roberta.RobertaTokenizer'>\n",
-        "# args.config_name : \n",
-        "# args.model_name_or_path : microsoft/codebert-base\n",
-        "# args.tokenizer_name: \n",
-        "# args.do_lower_case: False\n",
-        "# args.max_target_length : 30\n",
-        "# args.n_gpu : 1\n",
-        "# args.do_train : True\n",
-        "# args.train_filename : ../data/java/train/\n",
-        "# args.train_batch_size : 32\n",
-        "# args.gradient_accumulation_steps : 1\n",
-        "# args.train_steps : -1\n",
-        "# args.num_train_epochs : 20\n",
-        "# args.learning_rate : 5e-05\n",
-        "# args.adam_epsilon : 1e-08\n",
-        "# args.train_batch_size : 32\n",
-        "# args.do_eval : True\n",
-        "# args.do_test : True\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "YDKSZWdQiFlh",
-        "outputId": "1e62a59d-6422-4d4a-f958-5b956a33fdbb",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
-        }
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "1\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'/device:GPU:0'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 16
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "1lykOGJZil2u"
       },
       "execution_count": null,
       "outputs": []
